# BirthdayList-Plasmoid

./: AUTHORS  CMakeLists.txt  Changelog  README  THANKS  TODO  install-birthdaylist.sh  install-support-akonadi.sh  install.sh  uninstall-birthdaylist.sh  uninstall-support-akonadi.sh  uninstall.sh
applet/: CMakeLists.txt
applet/po/: CMakeLists.txt  cz.po  de.po  en_GB.po  extract_messages.sh  plasma_applet_birthdaylist.pot  sk.po
applet/src/: CMakeLists.txt  birthdaylist_appearance_config.ui  birthdaylist_applet.cpp  birthdaylist_applet.h  birthdaylist_colors_config.ui  birthdaylist_contacts_config.ui  birthdaylist_contents_config.ui  birthdaylist_datasource_config.ui  birthdaylist_events_config.ui  birthdaylist_filter_config.ui  birthdaylistentry.cpp  birthdaylistentry.h  plasma-applet-birthdaylist.desktop
dataengine-akonadi/: CMakeLists.txt
dataengine-akonadi/src/: CMakeLists.txt  birthdaylist_akonadi_dataengine.cpp  birthdaylist_akonadi_dataengine.h  plasma-dataengine-birthdaylist_akonadi.desktop
dataengine-default/: CMakeLists.txt
dataengine-default/namedaydefs/: namedays_cz.txt  namedays_de.txt
dataengine-default/src/: CMakeLists.txt  birthdaylist_dataengine.cpp  birthdaylist_dataengine.h  plasma-dataengine-birthdaylist.desktop
icons/: CMakeLists.txt  hisc-app-birthdaycake.svgz
namedaydefs/: CMakeLists.txt  namedays_fr.txt  namedays_pl.txt  namedays_sk.txt
po/: CMakeLists.txt  CMakeLists.txt~  Messages.sh  cz.po  de.po  en_GB.po  extract_messages.sh  fr.po  nl.po  plasma_applet_birthdaylist.pot  plasma_applet_kbirthdayapplet.pot  pt_BR.po  sk.po
src/: CMakeLists.txt  birthdaylist_aboutdata.cpp  birthdaylist_aboutdata.h  birthdaylist_applet.cpp  birthdaylist_applet.h  birthdaylist_config_events.ui  birthdaylist_config_table.ui  birthdaylist_confighelper.cpp  birthdaylist_confighelper.h  birthdaylist_model.cpp  birthdaylist_model.h  birthdaylist_modelentry.cpp  birthdaylist_modelentry.h  birthdaylist_source_akonadi.cpp  birthdaylist_source_akonadi.h  birthdaylist_source_collections.cpp  birthdaylist_source_collections.h  birthdaylist_source_contacts.cpp  birthdaylist_source_contacts.h  birthdaylist_source_kabc.cpp  birthdaylist_source_kabc.h  birthdaylist_view.cpp  birthdaylist_view.h  plasma-applet-birthdaylist.desktop
src/applet/: CMakeLists.txt  CMakeLists.txt~  Messages.sh  birthdaylist_appearance_config.ui  birthdaylist_applet.cpp  birthdaylist_applet.h  birthdaylist_applet_config.ui  birthdaylist_contents_config.ui  birthdaylist_datasource_config.ui  birthdaylistentry.cpp  birthdaylistentry.h  blistentry.cpp  blistentry.cpp~  blistentry.h  blistentry.h~  bn_applet.cpp  bn_applet.h  bn_applet_config.ui  bn_listentry.cpp  bn_listentry.h  kbirthdayapplet.cpp  kbirthdayapplet.cpp~  kbirthdayapplet.h  kbirthdayapplet.h~  plasma-applet-birthdaylist.desktop  plasma-applet-birthdays-namedays.desktop  plasma-applet-kbirthday.desktop
src/dataengine/: CMakeLists.txt  birthdaylist_dataengine.cpp  birthdaylist_dataengine.h  bn_dataengine.cpp  bn_dataengine.h  kabcengine.cpp  kabcengine.cpp~  kabcengine.h  plasma-dataengine-birthdaylist.desktop  plasma-dataengine-birthdays-namedays.desktop  plasma-dataengine-kabc.desktop
src/dataengine/namedaydefs/: CMakeLists.txt  namedays_cz.txt  namedays_dk.txt  namedays_hu.txt  namedays_no.txt  namedays_se.txt
